[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
#polars = { version = "0.36.2", default-features = false }
#polars-core = { version = "0.36.2", default-features = false }
#polars-ffi = { version = "0.36.2", default-features = false }
#polars-plan = { version = "0.36.2", default-feautres = false }
#polars-lazy = { version = "0.36.2", default-features = false }
polars = { git = "https://github.com/sahuagin/polars.git", branch="after_rust_0.36.2", default-features = false }
polars-core = { git = "https://github.com/sahuagin/polars.git", branch="after_rust_0.36.2", default-features = false }
polars-ffi = { git = "https://github.com/sahuagin/polars.git", branch="after_rust_0.36.2", default-features = false }
polars-plan = { git = "https://github.com/sahuagin/polars.git", branch="after_rust_0.36.2", default-features = false }
polars-lazy = { git = "https://github.com/sahuagin/polars.git", branch="after_rust_0.36.2", default-features = false }
